# rust-axum-boiller

./: .env.example  .gitignore  Cargo.toml  README.id.md  README.md
migrations/: 20240101000000_create_users_table.sql  20240102000000_add_user_status.sql  20240103000000_add_github_oauth.sql  20240104000000_add_google_oauth.sql
src/: main.rs
src/domain/: dtos.rs  mod.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/handlers/: auth.rs  mod.rs  user_management.rs  users.rs
src/infrastructure/: errors.rs  mod.rs
src/infrastructure/auth/: github.rs  google.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/infrastructure/database/: postgres.rs
src/infrastructure/repositories/: postgres_user_repository.rs
src/routes/: api.rs
src/usecases/: auth.rs  user_management.rs  users.rs
src/utils/: response.rs  validation.rs
