[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
thiserror = "2.0.11"
anyhow = "1.0.95"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
time = "0.3.37"
async-trait = "0.1.89"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
reqwest = { version = "0.12", features = ["json"] }
